# RustSniffer-AI

./: .gitignore  Cargo.toml  README.md
.specify/: init-options.json  integration.json
.specify/integrations/: speckit.manifest.json  trae.manifest.json
.specify/memory/: constitution.md
.trae/rules/: project_rules.md
.trae/skills/speckit-plan/: SKILL.md
doc/: RustSniffer-AI_PRD.md
specs/001-ai-traffic-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-traffic-analyzer/checklists/: requirements-quality.md  requirements.md
specs/001-ai-traffic-analyzer/contracts/: cli.md
src/: lib.rs  main.rs
src/capture/: bpf.rs  interface.rs  mod.rs  sniffer.rs
src/cli/: args.rs  commands.rs  mod.rs
src/common/: error.rs  mod.rs  types.rs  utils.rs
src/config/: loader.rs  mod.rs  settings.rs
src/dpi/: classifier.rs  engine.rs  ja3.rs  mod.rs  ndpi.rs
src/logging/: mod.rs  setup.rs
src/protocol/: ethernet.rs  icmp.rs  ip.rs  mod.rs  parser.rs  tcp.rs  udp.rs
src/storage/: cleanup.rs  metadata.rs  mod.rs  packet_store.rs  query.rs
tests/: integration_test.rs
